# Cahn-Hilliard-MPI

./: CMakeLists.txt  Definitions.h  DomainDecomposition.cc  DomainDecomposition.h  ExchangeDBL.cc  ExchangeDBL.h  FillHaloLayers.cc  FillHaloLayers.h  Initialization.cc  Initialization.h  Integral.cc  Integral.h  Kernels.cc  Kernels.h  MpiSetup.cc  MpiSetup.h  README.md  VtkParallelWriter.cc  VtkParallelWriter.h  main.cc
